Fixed width problem of overflow class

--- a/resources/style.css
+++ b/resources/style.css
@@ -147,6 +147,7 @@ body {
 /* overflow */
 
 .overflow {
+    max-width: 100%;
     overflow: hidden !important;
 }
 
